test/zinc_source/compile_errors/iterations/07_for_tuple_destructure_arity_mismatch.zn
// expected-error: for-loop destructuring arity mismatch

fn main() {
    for a, b, c in [(1, 2)] {
        print("{a}")
    }
}
